# aspose-cells-cloud-python

./: .gitignore  .pypirc  .travis.yml  CHANGELOG.md  HistoryVersion.md  LICENSE  Pack_PythonPackage.ps1  README.md  TestCellsCloudSDK.ps1  TestPythonSDK.ps1  pyproject.toml  setup.py  test.ps1
Examples/: AuthUtil.py  Example_ConvertExcel.py  Example_CopyFile.py  Example_CopyFolder.py  Example_CreateFolder.py  Example_DataProcessing.py  Example_DeleteDecryptWorkbook.py  Example_DeleteDocumentProperties.py  Example_DeleteDocumentProperty.py  Example_DeleteDocumentUnProtectFromChanges.py  Example_DeleteFile.py  Example_DeleteFolder.py  Example_DeleteHeaderFooter.py  Example_DeleteHorizontalPageBreak.py  Example_DeleteHorizontalPageBreaks.py  Example_DeleteMetadata.py  Example_DeletePivotTableField.py  Example_DeleteUnProtectWorkbook.py  Example_DeleteUnprotectWorksheet.py  Example_DeleteVerticalPageBreak.py  Example_DeleteVerticalPageBreaks.py  Example_DeleteWorkbookBackground.py  Example_DeleteWorkbookName.py  Example_DeleteWorkbookNames.py  Example_DeleteWorksheet.py  Example_DeleteWorksheetBackground.py  Example_DeleteWorksheetCellsRange.py  Example_DeleteWorksheetChart.py  Example_DeleteWorksheetChartLegend.py  Example_DeleteWorksheetChartTitle.py  Example_DeleteWorksheetCharts.py  Example_DeleteWorksheetColumns.py  Example_DeleteWorksheetComment.py  Example_DeleteWorksheetComments.py  Example_DeleteWorksheetConditionalFormatting.py  Example_DeleteWorksheetConditionalFormattingArea.py  Example_DeleteWorksheetConditionalFormattings.py  Example_DeleteWorksheetDateFilter.py  Example_DeleteWorksheetFilter.py  Example_DeleteWorksheetFreezePanes.py  (+463 more)
TestData/: Book1.xlsx  BookCsvDuplicateData.csv  BookTableL2W.xlsx  BookText.xlsx  (+23 more)
(+2930 files in other folders)
