[project]
name = "asposecellscloud"
version = "24.12"
authors = [
  { name="Aspose Cloud", email="aspose.cloud@aspose.com" },
]
description = "Python Cloud SDK wraps Aspose.Cells REST API so you could seamlessly integrate Microsoft Excel® spreadsheet generation, manipulation, conversion & inspection features into your own Python applications."
keywords = ["excel", "spreadsheet",  "convert", "xlsx", "pdf", "json", "cloud", "rest api", "merge", "split", "protect"]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3.6',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
]
dependencies = [
  "urllib3 >= 1.15", 
  "six >= 1.10",
  "certifi", 
  "python-dateutil"
]
[project.urls]
"Homepage" = "https://github.com/aspose-cells-cloud/aspose-cells-cloud-python"
